<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CenX</string>
    <string name="url_hint">输入网址或搜索内容</string>
    <string name="btn_go">前往</string>
    <string name="btn_back">后退</string>
    <string name="btn_forward">前进</string>
    <string name="btn_refresh">刷新</string>
    <string name="btn_home">主页</string>
    <string name="tab_new">新建标签</string>
    <string name="tab_close">关闭标签</string>
    <string name="menu_bookmarks">书签</string>
    <string name="menu_history">历史</string>
    <string name="menu_source">查看源码</string>
    <string name="menu_toolbox">工具箱</string>
    <string name="menu_ai">AI助手</string>
    <string name="menu_download">下载管理</string>
    <string name="menu_reader">小说阅读</string>
    <string name="menu_translate">翻译网页</string>
    <string name="menu_video">视频播放</string>
    <string name="menu_settings">设置</string>
    <string name="menu_share">分享</string>
    <string name="menu_share_page">分享网页</string>
    <string name="setting_ua">用户代理</string>
    <string name="setting_search">搜索引擎</string>
    <string name="setting_homepage">主页设置</string>
    <string name="setting_clear">清除数据</string>
    <string name="ua_default">默认(Android)</string>
    <string name="ua_desktop">桌面版(Windows Chrome)</string>
    <string name="ua_ipad">iPad Safari</string>
    <string name="ua_iphone">iPhone Safari</string>
    <string name="search_baidu">百度</string>
    <string name="search_google">Google</string>
    <string name="search_bing">必应</string>
    <string name="search_sogou">搜狗</string>
    <string name="search_duckduckgo">DuckDuckGo</string>
    <string name="search_metaso">秘塔AI</string>
    <string name="setting_homepage_type">首页类型</string>
    <string name="homepage_default_page">默认首页（快捷链接）</string>
    <string name="homepage_custom_url">自定义网址</string>
    <string name="homepage_quick_links">快捷链接管理</string>
    <string name="quick_link_title">编辑快捷链接</string>
    <string name="quick_link_name">名称</string>
    <string name="quick_link_url">网址</string>
    <string name="quick_link_icon">图标文字</string>
    <string name="quick_link_add">添加链接</string>
    <string name="quick_link_save">保存</string>
    <string name="quick_link_delete">删除</string>
    <string name="quick_link_cancel">取消</string>
    <string name="homepage_default">https://www.baidu.com</string>
    <string name="ai_title">AI助手</string>
    <string name="ai_input_hint">输入你的问题...</string>
    <string name="ai_send">发送</string>
    <string name="toolbox_title">工具箱</string>
    <string name="tool_encoding">编码转换</string>
    <string name="tool_qrcode">二维码生成</string>
    <string name="tool_base64">Base64编解码</string>
    <string name="tool_color">颜色拾取</string>
    <string name="tool_useragent">UA查看</string>
    <string name="tool_ip">IP查询</string>
    <string name="source_title">页面源码</string>
    <string name="source_copy">复制源码</string>
    <string name="source_refresh">刷新源码</string>
    <string name="windows_title">窗口管理</string>
    <string name="no_tabs">暂无打开的标签页</string>
    <string name="all_tabs">所有标签页 (%d)</string>
    <string name="download_title">下载管理</string>
    <string name="download_no_files">暂无下载文件</string>
    <string name="download_size">大小</string>
    <string name="download_progress">进度</string>
    <string name="video_title">视频播放器</string>
    <string name="video_input_hint">输入视频直链URL…</string>
    <string name="video_play">播放</string>
    <string name="reader_title">小说阅读器</string>
    <string name="reader_url_hint">输入小说章节URL…</string>
    <string name="reader_load">加载</string>
    <string name="reader_extracting">正在提取正文…</string>
    <string name="reader_no_content">未能提取到正文内容</string>
    <string name="translate_title">网页翻译</string>
    <string name="translate_input_hint">输入要翻译的文本…</string>
    <string name="translate_btn">翻译</string>
    <string name="translate_result_hint">翻译结果将显示在这里</string>
    <string name="translate_source">源语言</string>
    <string name="translate_target">目标语言</string>
    <string name="translate_auto">自动检测</string>
    <string name="translate_zh">中文</string>
    <string name="translate_en">英文</string>
    <string name="translate_jp">日文</string>
    <string name="translate_kr">韩文</string>
    <string name="translate_fr">法文</string>
    <string name="translate_de">德文</string>
    <string name="menu_incognito">无痕模式</string>
    <string name="setting_adblock">广告拦截</string>
    <string name="setting_incognito">无痕模式</string>
    <string name="setting_resource_sniff">资源嗅探能力</string>
    <string name="menu_about">关于浏览器</string>
    <string name="about_title">关于CenX 浏览器</string>
    <string name="about_version">版本号</string>
    <string name="about_developer">开发者：鸬鹈</string>
    <string name="about_developer_name">Centigrade</string>
    <string name="about_copyright">© 2025 Centigrade Studio. All rights reserved.</string>
    <string name="about_user_agreement">用户协议</string>
    <string name="user_agreement_content">你懒得看我也懒得写，该做什么不该做什么你我心里都清楚</string>

</resources>